# topic

./: CMakeLists.txt
conf/: '  plsa_conf.xml  test.xml~
data/: dict  doc_probs  sample_doc_word2  sample_words_tf  term_probs  tianjin_text
data/Data/: 20150910.err  20150911.err
include/: DataType.h  ICTSimHashInterface.h  NLPIR.h  common.h  const.h  hash.hpp  plsa.h  plsa.h~  simhash.h  subtopic.h  subtopic.h~  topic.h  util.h
log/: 20150911-153133.17924  20150911-153327.18002  20150911-153345.18040  20150911-153606.18128  20150911-153643.18157  20150911-153652.18163  20150911-154501.18270  20150911-154818.18367  20150911-154920.18452  20150911-154947.18509  20150911-155948.18682  20150911-160051.18760  test.INFO
src/: 2  CMakeLists.txt  ICTSimHashInterface.cpp  plsa.cpp  plsa_train.cpp  subtopic.cpp  test.cpp  topic.cpp  util.cpp
